--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "rdiff"
 version = "0.1.0"
 authors = ["Justin Barclay <justincbarclay@gmail.com>"]
 
+[lib]
+name = "diff"
+path = "src/lib/diff/diff.rs"
+
 [[bin]]
 name = "rdiff"
 path = "src/main.rs"
