--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,9 +3,9 @@ name = "rdiff"
 version = "0.1.0"
 authors = ["Justin Barclay <justincbarclay@gmail.com>"]
 
-[lib]
-name = "diff"
-path = "src/lib/diff/diff.rs"
+# [lib]
+# name = "diff"
+# path = "src/lib/diff/diff.rs"
 
 [[bin]]
 name = "rdiff"
