--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,10 +2,7 @@
 name = "rdiff"
 version = "0.1.0"
 authors = ["Justin Barclay <justincbarclay@gmail.com>"]
-
-# [lib]
-# name = "diff"
-# path = "src/lib/diff/diff.rs"
+edition = "2018"
 
 [[bin]]
 name = "rdiff"
